--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ bundle
 .rspec-local
 spec/examples.txt
 specs.out
+/Gemfile.orig
+/rspec-mocks.gemspec.orig
+/spec/rspec/mocks/any_instance_spec.rb.orig
+/spec/rspec/mocks/mutate_const_spec.rb.orig
